--- a/app/src/App.module.scss
+++ b/app/src/App.module.scss
@@ -2,12 +2,105 @@
 @import '~bootstrap/scss/bootstrap.scss';
 
 .App {
-  text-align: center;
+	height: 100%;
+}
+
+// HEADER
+
+.header {
+	padding: 2rem 0;
+	min-height: 100%;
+	display: flex;
+	align-items: center;
+	color: $white;
+	background-color: $primary-color;
+}
+
+.header-content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.header-tab {
+	color: $primary-color;
+	min-height: 360px;
+	display: none;
+
+	> div {
+		padding: 15px;
+		display: flex;
+		flex: 1;
+		flex-direction: column;
+		min-height: 100%;
+		justify-content: space-between;
+		align-items: center;
+		background-color: $white;
+	}
+
+	> div > div > p:first-child {
+		font-weight: 700;
+		text-align: center;
+	}
+
+	.qr {
+		max-width: 80px;
+	}
+
+	.app-store {
+		max-width: 160px;
+	}
+
+	ul {
+		padding-left: 1rem;
+	}
+	// .nav-tabs {
+		
+
+	// 	// &.active {
+	// 	// 	background-color: $gray-400;
+	// 	// }
+	// }
+
+	&.tab-active {
+		display: flex;
+	}
+}
+
+.header-nav {
+	display: flex;
+
+	> ul {
+		background-color: $gray-200;
+		flex: 1;
+		border: none;
+
+		.nav-link.tab-active {
+			background-color: $white;
+		}
+	}
+}
+
+@media (min-width: 992px) {
+	.header-tab {
+		display: flex;
+	}
+
+	.header-nav {
+		display: none;
+	}
+}
+
+// PRODUCTS
+
+.products {
+	text-align: center;
+	padding: 3rem 0;
 }
 
 .product {
 	position: relative;
-	padding-bottom: 30px;
+	margin-bottom: 30px;
 	display: inline-block;
 
 	&:hover {
